objects/AccountContactRelation.object
<CustomObject>
    <fields>
        <fullName>ContactEmail__c</fullName>
        <description>Contact&apos; Email</description>
        <formula>Contact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <description>Contact&apos;s full name</description>
        <formula>Contact.LastName + &apos;, &apos; + Contact.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate if this contact is a primary for accounts, different from isDirect as isDirect indicates only direct relationships between a contact and an account, where as in IMCD, a contact can be the primary for more than one account</description>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>